--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -373,7 +373,12 @@ header {
   padding: 20px 40px;
 }
 
+.nav {
+  width: 90%;
+}
+
 .social {
+  width: 10%;
   margin-left: 40px;
 }
 
@@ -395,7 +400,7 @@ header {
 .nav a {
   font-family: "Nunito Sans", sans-serif;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 1.7rem;
   line-height: 30px;
   text-transform: uppercase;
   color: #e4e4e4;
@@ -457,6 +462,11 @@ header {
   position: relative;
   clear: both;
   margin-top: 10%;
+}
+
+.main .subtitle {
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 3rem;
 }
 
 .heroImg {
@@ -551,8 +561,22 @@ h1::after {
     transform: translateY(0);
   }
 }
+.rightContainer {
+  background-image: url(../../../assets/contact/bg.jpg);
+}
+
 .rightContainer h3 {
   text-align: center;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 3rem;
+  -webkit-text-decoration: underline 4px #dd1c63;
+          text-decoration: underline 4px #dd1c63;
+}
+
+.rightContainer p {
+  padding: 20px;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 1.8rem;
 }
 
 .skillIcons {
@@ -576,6 +600,10 @@ h1::after {
   background-color: grey;
 }
 
+footer p {
+  text-align: center;
+}
+
 #portfolio {
   background-image: url(../../../assets/portfolio/bg.jpg);
   margin-bottom: 50px;
@@ -583,6 +611,10 @@ h1::after {
 
 .port_title h3 {
   text-align: center;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 3rem;
+  -webkit-text-decoration: 4px solid underline #dd1c63;
+          text-decoration: 4px solid underline #dd1c63;
 }
 
 .projects {
@@ -619,56 +651,18 @@ h1::after {
   text-align: center;
 }
 
+.project_item button:hover,
 .project_item button:hover {
   background-color: #dd1c63;
   color: black;
+  transition: background-color 1.2s ease-out;
 }
 
-/*------------------------------------------------------------------*/
-/*	23) Section Contact
-/*------------------------------------------------------------------*/
-#contact {
-  background-color: #141414;
-  padding: 140px 0;
-}
-
-#contact .barna__title {
-  margin-bottom: 50px;
-}
-
-/*------------------------------------------------------------------*/
-/*	24) Contact (element)
-/*------------------------------------------------------------------*/
-.barna__contact {
-  width: 100%;
-  padding: 20px 50px;
-  border-radius: 20px;
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-}
-
-.barna__contact .item.nobg {
-  background-color: transparent;
-  border-radius: 0;
-}
-
-.barna__contact .item {
-  margin-bottom: 30px;
+form p {
   position: relative;
-  overflow: hidden;
-  background-color: #141414;
-  border-radius: 25px;
 }
 
-.barna__contact input,
-.barna__contact textarea {
-  background-color: transparent;
-  position: relative;
-  z-index: 3;
-}
-
-.barna__contact .placeholder {
+form .placeholder {
   position: absolute;
   padding: 0 20px;
   display: block;
@@ -681,69 +675,112 @@ h1::after {
   transition: all 0.3s ease;
 }
 
-.barna__contact .active .placeholder {
+/*------------------------------------------------------------------*/
+/*	23) Section Contact
+/*------------------------------------------------------------------*/
+.contact {
+  padding: 1rem;
+  box-shadow: 0 0 20px 0 rgba(221, 28, 99, 0.7);
+  margin: 10px;
+  background-image: url(../../../assets/contact/bg.jpg);
+}
+
+.personal_info {
+  background: #141414;
+  margin: 10px;
+  padding: 10px;
+}
+
+.personal_info h3,
+.personal_info ul {
+  text-align: center;
+  margin: 0 0 1rem 0;
+}
+
+.personal_info span {
+  color: #dd1c63;
+}
+
+.contact_info form {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  padding: 0.5rem;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+  background-color: #141414;
+  color: white;
+  font-family: "Nunito Sans", sans-serif;
+  border-radius: 20px;
+  outline: none;
+  line-height: 1.5;
+  padding: 5px;
+}
+
+input[type=text]:hover,
+input[type=email]:hover,
+textarea:hover {
+  border: 2px solid #dd1c63;
+}
+
+.contact_info form button,
+.contact_info form textarea {
+  width: 100%;
+  padding: 0.5rem;
+}
+
+.contact_info label {
+  display: block;
+}
+
+.contact_info form p {
+  margin: 0;
+}
+
+.contact_info form .full {
+  grid-column: 1/3;
+}
+
+.contact_info form button {
+  font-family: "Nunito Sans", sans-serif;
+  background: #141414;
+  color: white;
+  border-radius: 20px;
+  border: 0;
+  text-transform: uppercase;
+}
+
+.contact_info form button:hover,
+.contact_info form button:focus {
+  background: #dd1c63;
+  color: black;
+  transition: background-color 1.5s ease-out;
+}
+
+form p {
+  position: relative;
+}
+
+form .placeholder {
+  position: absolute;
+  padding: 0 20px;
+  display: block;
+  font-size: 14px;
+  line-height: 38px;
+  left: 0;
+  top: -3px;
+  white-space: nowrap;
+  border-radius: 25px;
+  transition: all 0.3s ease;
+}
+
+form .active .placeholder {
   left: 100%;
   transform: translateX(-100%);
   background-color: #000;
   margin-left: -6px;
-}
-
-.barna__contact .info {
-  display: -moz-flex;
-  display: -ms-flex;
-  display: -o-flex;
-  display: flex;
-  -moz-flex-direction: column;
-  -o-flex-direction: column;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-bottom: 30px;
-}
-
-.barna__contact .info > * {
-  padding: 10px 20px;
-  background-color: #141414;
-  border-radius: 25px;
-  font-weight: 500;
-  font-size: 14px;
-  display: none;
-  color: #dd1c63;
-}
-
-.barna__contact .in {
-  display: -moz-flex;
-  display: -ms-flex;
-  display: -o-flex;
-  display: flex;
-  margin-left: -30px;
-}
-
-.barna__contact .left {
-  width: 50%;
-  padding-left: 30px;
-}
-
-.barna__contact .right {
-  width: 50%;
-  padding-left: 30px;
-}
-
-#send_message {
-  display: inline-block;
-  text-decoration: none;
-  line-height: 46px;
-  padding: 0 40px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  background-color: #141414;
-  border-radius: 30px;
-  font-size: 16px;
-  color: #a1a1a1;
-  outline: none;
-  border: 2px solid transparent;
-}
-
-#send_message:focus {
-  border-color: #dd1c63;
 }/*# sourceMappingURL=styles.css.map */
