added netlify form submission

--- a/styles/sass/partials/_portfolio.scss
+++ b/styles/sass/partials/_portfolio.scss
@@ -16,9 +16,11 @@
   align-items: center;
 }
 .project_item {
+  position: relative;
   display: flex;
   flex-direction: column;
 }
+
 .project_item img {
   width: 23rem;
   height: 20rem;
