--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -90,3 +90,114 @@ header {
 .social a:hover {
   color: $primary;
 }
+
+// mobile menu
+@mixin easeOut {
+  transition: all 0.5s ease-out;
+}
+
+.menu-btn {
+  position: absolute;
+  z-index: 100;
+  right: 35px;
+  top: 63px;
+  cursor: pointer;
+  @include easeOut;
+}
+
+.btn-line {
+  width: 28px;
+  height: 3px;
+  margin: 0 0 5px 0;
+  background: white;
+  @include easeOut;
+}
+
+.close {
+  transform: rotate(180deg);
+  .btn-line {
+    &:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px);
+    }
+    &:nth-child(2) {
+      opacity: 0;
+    }
+    &:nth-child(3) {
+      transform: rotate(-45deg) translate(7px, -6px);
+    }
+  }
+}
+
+// Overlay
+
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 0.8;
+  visibility: hidden;
+  &.show {
+    visibility: visible;
+  }
+  .menu-branding,
+  .menu-nav {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden;
+  }
+  .menu-nav {
+    margin: 0;
+    padding: 0;
+    background: rgba(0, 0, 0, 0.95);
+    list-style: none;
+    transform: translate3d(0, -100%, 0);
+    @include easeOut;
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+  .menu-branding {
+    background: rgba(0, 0, 0, 0.95);
+    transform: translate3d(0, 100%, 0);
+    @include easeOut;
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+    h2 {
+      font-family: $headingFont;
+      font-size: 5rem;
+      color: white;
+    }
+  }
+  .nav-item {
+    transform: translate3d(600px, 0, 0);
+    @include easeOut;
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+    &.current > a {
+      color: $primary;
+    }
+  }
+  .nav-link {
+    display: inline-block;
+    position: relative;
+    font-family: $headingFont;
+    font-size: 2.5rem;
+    padding: 1rem 0;
+    @include easeOut;
+    &:hover {
+      color: $primary;
+    }
+  }
+}
+@for $x from 1 through 4 {
+  .nav-item:nth-child(#{$x}) {
+    transition-delay: $x * 0.2s;
+  }
+}
