--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -1,2 +1,69 @@
-@media (min-width: 700px) {
+@media screen and (max-width: 500px) {
+  .social ul {
+    display: flex;
+    flex-direction: initial;
+  }
+  .menu .menu-branding h2 {
+    margin: 5px;
+    font-size: 2rem;
+  }
+  .menu .menu-nav {
+    width: 100%;
+    font-size: 1.5rem;
+  }
+  .menu .menu-branding {
+    display: none;
+  }
+  .contact {
+    width: 90%;
+  }
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .social ul {
+    display: flex;
+    flex-direction: initial;
+    flex-wrap: nowrap;
+  }
+  .menu .menu-nav {
+    width: 100%;
+    font-size: 1.5rem;
+  }
+  .menu .menu-branding {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .projects {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+  }
+  .social ul {
+    display: flex;
+    flex-direction: initial;
+  }
+  .menu .menu-branding h2 {
+    margin: 5px;
+    font-size: 2.5rem;
+  }
+  .menu .nav-item a {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1170px) {
+  .menu .menu-branding h2 {
+    // margin: 5px;
+    font-size: 3rem;
+  }
+}
+
+@media screen and (min-width: 1171px) {
 }
