--- a/styles/sass/partials/_portfolio.scss
+++ b/styles/sass/partials/_portfolio.scss
@@ -20,7 +20,11 @@
   display: flex;
   flex-direction: column;
 }
-
+.project_item:hover,
+.project_item:focus {
+  transform: scale(1.1);
+  transition: all 0.5s ease-in-out;
+}
 .project_item img {
   width: 23rem;
   height: 20rem;
@@ -41,25 +45,8 @@
   text-align: center;
 }
 .project_item button:hover,
-.project_item button:hover {
+.project_item button:focus {
   background-color: $primary;
   color: black;
   transition: background-color 1.2s ease-out;
-}
-
-form p {
-  position: relative;
-}
-
-form .placeholder {
-  position: absolute;
-  padding: 0 20px;
-  display: block;
-  font-size: 14px;
-  line-height: 38px;
-  left: 0;
-  top: 6px;
-  white-space: nowrap;
-  border-radius: 25px;
-  transition: all 0.3s ease;
 }
