--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -288,7 +288,7 @@ body {
 
 .wrapper {
   box-sizing: border-box;
-  max-width: 1200px;
+  max-width: 1500px;
   width: 100%;
   float: left;
   clear: both;
@@ -456,27 +456,141 @@ header {
   color: #dd1c63;
 }
 
-.main .hero {
+.menu-btn {
+  position: absolute;
+  z-index: 100;
+  right: 35px;
+  top: 63px;
+  cursor: pointer;
+  transition: all 0.5s ease-out;
+}
+
+.btn-line {
+  width: 28px;
+  height: 3px;
+  margin: 0 0 5px 0;
+  background: white;
+  transition: all 0.5s ease-out;
+}
+
+.close {
+  transform: rotate(180deg);
+}
+.close .btn-line:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+.close .btn-line:nth-child(2) {
+  opacity: 0;
+}
+.close .btn-line:nth-child(3) {
+  transform: rotate(-45deg) translate(7px, -6px);
+}
+
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 0.8;
+  visibility: hidden;
+}
+.menu.show {
+  visibility: visible;
+}
+.menu .menu-branding,
+.menu .menu-nav {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+  float: left;
+  width: 50%;
+  height: 100vh;
+  overflow: hidden;
+}
+.menu .menu-nav {
+  margin: 0;
+  padding: 0;
+  background: rgba(0, 0, 0, 0.95);
+  list-style: none;
+  transform: translate3d(0, -100%, 0);
+  transition: all 0.5s ease-out;
+}
+.menu .menu-nav.show {
+  transform: translate3d(0, 0, 0);
+}
+.menu .menu-branding {
+  background: rgba(0, 0, 0, 0.95);
+  transform: translate3d(0, 100%, 0);
+  transition: all 0.5s ease-out;
+}
+.menu .menu-branding.show {
+  transform: translate3d(0, 0, 0);
+}
+.menu .menu-branding h2 {
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 5rem;
+  color: white;
+}
+.menu .nav-item {
+  transform: translate3d(600px, 0, 0);
+  transition: all 0.5s ease-out;
+}
+.menu .nav-item.show {
+  transform: translate3d(0, 0, 0);
+}
+.menu .nav-item.current > a {
+  color: #dd1c63;
+}
+.menu .nav-link {
+  display: inline-block;
+  position: relative;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 2.5rem;
+  padding: 1rem 0;
+  transition: all 0.5s ease-out;
+}
+.menu .nav-link:hover {
+  color: #dd1c63;
+}
+
+.nav-item:nth-child(1) {
+  transition-delay: 0.2s;
+}
+
+.nav-item:nth-child(2) {
+  transition-delay: 0.4s;
+}
+
+.nav-item:nth-child(3) {
+  transition-delay: 0.6s;
+}
+
+.nav-item:nth-child(4) {
+  transition-delay: 0.8s;
+}
+
+main {
   width: 100%;
   float: left;
   position: relative;
   clear: both;
-  margin-top: 10%;
+  margin-top: 8vh;
 }
 
-.main .subtitle {
+main .subtitle {
   font-family: "Nunito Sans", sans-serif;
-  font-size: 3rem;
+  font-size: clamp(1rem, 3vw + 1rem, 4rem);
 }
 
 .heroImg {
   position: relative;
   width: 100%;
+  background-size: cover;
 }
 
 .txtContainer {
   position: absolute;
-  top: 5%;
+  top: 10%;
   left: 5%;
 }
 
@@ -563,6 +677,7 @@ h1::after {
 }
 .rightContainer {
   background-image: url(../../../assets/contact/bg.jpg);
+  width: 100%;
 }
 
 .rightContainer h3 {
@@ -590,6 +705,11 @@ h1::after {
 
 .icons {
   margin: 20px;
+}
+
+.icons:hover {
+  transform: scale(1.3);
+  transition: all 0.5s ease-out;
 }
 
 .skillIcons img {
@@ -631,6 +751,12 @@ footer p {
   flex-direction: column;
 }
 
+.project_item:hover,
+.project_item:focus {
+  transform: scale(1.1);
+  transition: all 0.5s ease-in-out;
+}
+
 .project_item img {
   width: 23rem;
   height: 20rem;
@@ -653,27 +779,10 @@ footer p {
 }
 
 .project_item button:hover,
-.project_item button:hover {
+.project_item button:focus {
   background-color: #dd1c63;
   color: black;
   transition: background-color 1.2s ease-out;
-}
-
-form p {
-  position: relative;
-}
-
-form .placeholder {
-  position: absolute;
-  padding: 0 20px;
-  display: block;
-  font-size: 14px;
-  line-height: 38px;
-  left: 0;
-  top: 6px;
-  white-space: nowrap;
-  border-radius: 25px;
-  transition: all 0.3s ease;
 }
 
 /*------------------------------------------------------------------*/
@@ -784,4 +893,77 @@ form .active .placeholder {
   transform: translateX(-100%);
   background-color: #000;
   margin-left: -6px;
+}
+
+@media screen and (max-width: 500px) {
+  .social ul {
+    display: flex;
+    flex-direction: initial;
+  }
+
+  .menu .menu-branding h2 {
+    margin: 5px;
+    font-size: 2rem;
+  }
+
+  .menu .menu-nav {
+    width: 100%;
+    font-size: 1.5rem;
+  }
+
+  .menu .menu-branding {
+    display: none;
+  }
+
+  .contact {
+    width: 90%;
+  }
+
+  input[type=text],
+input[type=email],
+textarea {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 550px) {
+  .social ul {
+    display: flex;
+    flex-direction: initial;
+    flex-wrap: nowrap;
+  }
+
+  .menu .menu-nav {
+    width: 100%;
+    font-size: 1.5rem;
+  }
+
+  .menu .menu-branding {
+    display: none;
+  }
+}
+@media screen and (max-width: 768px) {
+  .projects {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .social ul {
+    display: flex;
+    flex-direction: initial;
+  }
+
+  .menu .menu-branding h2 {
+    margin: 5px;
+    font-size: 2.5rem;
+  }
+
+  .menu .nav-item a {
+    font-size: 2rem;
+  }
+}
+@media screen and (min-width: 769px) and (max-width: 1170px) {
+  .menu .menu-branding h2 {
+    font-size: 3rem;
+  }
 }/*# sourceMappingURL=styles.css.map */
