--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -829,6 +829,7 @@ textarea {
   outline: none;
   line-height: 1.5;
   padding: 5px;
+  width: 100%;
 }
 
 input[type=text]:hover,
@@ -919,10 +920,17 @@ form .active .placeholder {
     width: 90%;
   }
 
-  input[type=text],
-input[type=email],
-textarea {
-    width: 90%;
+  .contact_info form {
+    width: 100%;
+    padding: 0.5rem;
+  }
+
+  .contact_info .inputs {
+    display: grid;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    grid-column: 1/3;
   }
 }
 @media screen and (max-width: 550px) {
