--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -1,3 +1,8 @@
+@media screen and (max-width: 400px) {
+  .contact.info form .full {
+    width: 85%;
+  }
+}
 @media screen and (max-width: 500px) {
   .social ul {
     display: flex;
