--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -5,7 +5,7 @@ $primary: #dd1c63;
 html {
   overflow-x: hidden;
   padding: 0px;
-  margin: 0px;
+  margin: 0 auto;
 }
 body {
   font-family: $bodyFont;
@@ -20,11 +20,12 @@ body {
   box-sizing: border-box;
   max-width: 1500px;
   width: 100%;
-  float: left;
+  // float: left;
   clear: both;
   min-height: 100vh;
   position: relative;
   overflow: hidden;
+  margin: 0 auto;
 }
 .wrapper .main {
   width: 100%;
