--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -1,7 +1,8 @@
 header {
   width: 100%;
-  margin-bottom: 50px;
-  padding: 50px 40px;
+  max-width: 1500px;
+  margin: 0 auto; 
+  padding: 50px 0px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -22,10 +23,7 @@ header {
 .nav {
   width: 90%;
 }
-.social {
-  width: 10%;
-  margin-left: 40px;
-}
+
 .nav ul {
   display: flex;
   flex-wrap: wrap;
@@ -134,7 +132,8 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.8;
+  max-width: 1500px;
+  opacity: 1;
   visibility: hidden;
   &.show {
     visibility: visible;
@@ -153,7 +152,7 @@ header {
   .menu-nav {
     margin: 0;
     padding: 0;
-    background: rgba(0, 0, 0, 0.95);
+    background: rgba(0, 0, 0, 0.9);
     list-style: none;
     transform: translate3d(0, -100%, 0);
     @include easeOut;
@@ -162,17 +161,22 @@ header {
     }
   }
   .menu-branding {
-    background: rgba(0, 0, 0, 0.95);
+    background: rgba(0, 0, 0, 1);
     transform: translate3d(0, 100%, 0);
     @include easeOut;
     &.show {
       transform: translate3d(0, 0, 0);
     }
-    h2 {
-      font-family: $headingFont;
-      font-size: 5rem;
-      color: white;
-    }
+    // h2 {
+    //   font-family: $headingFont;
+    //   font-size: 5rem;
+    //   color: white;
+    // }
+    img {
+      border-radius: 50%;
+      width: 25rem;
+      height: 21.55rem;
+    }  
   }
   .nav-item {
     transform: translate3d(600px, 0, 0);
@@ -188,8 +192,8 @@ header {
     display: inline-block;
     position: relative;
     font-family: $headingFont;
-    font-size: 2.5rem;
-    padding: 1rem 0;
+    font-size: 3.5rem;
+    padding: 2rem 0;
     @include easeOut;
     &:hover {
       color: $primary;
