--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -2,11 +2,40 @@
   .contact.info form .full {
     width: 85%;
   }
+  .full textarea {
+    width: 95%;
+  }
+  input[type="text"], input[type="email"] {
+    width: 95%;
+  }
+  main .txtContainer {
+    top: 18%;
+    left: 12%;
+  }
+  .txtContainer h1 {
+    font-size: clamp(1rem, 2vw + 1rem, 4rem);
+  }
+  .card .imgBx {
+    width: 19rem;
+    top: -4rem;
+    left: 0rem;
+  }
+  
+  .card {
+    max-width: 24rem;
+    margin: 85px 42px;
+  }
+  
 }
 @media screen and (max-width: 500px) {
   .social ul {
     display: flex;
     flex-direction: initial;
+  }
+
+  .txtContainer {
+    top: 20%;
+    left: 15%;
   }
   .menu .menu-branding h2 {
     margin: 5px;
@@ -22,6 +51,10 @@
   .contact {
     width: 90%;
   }
+
+  form .inputs p {
+    width: 24rem;
+  }
   .contact_info form {
     width: 100%;
     padding: 0.5rem;
@@ -32,6 +65,9 @@
     justify-content: center;
     align-items: center;
     grid-column: 1 / 3;
+  }
+  .contact_info form .inputs p {
+    width: 18rem;
   }
 }
 
@@ -50,6 +86,14 @@
   }
 }
 
+@media screen and (max-width: 665px) {
+  header .menu .menu-branding img {
+    margin: 5px;
+    width: 17rem;
+    height: 14.65rem;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .projects {
     display: flex;
@@ -60,12 +104,17 @@
     display: flex;
     flex-direction: initial;
   }
-  .menu .menu-branding h2 {
+  .menu .menu-branding img {
     margin: 5px;
-    font-size: 2.5rem;
+    width: 20rem;
+    height: 17.25rem;
   }
   .menu .nav-item a {
     font-size: 2rem;
+  }
+  .txtContainer {
+    top: 18%;
+    left: 17%;
   }
 }
 
@@ -74,7 +123,16 @@
     // margin: 5px;
     font-size: 3rem;
   }
+  .projects {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+  }
 }
 
 @media screen and (min-width: 1171px) {
+  .txtContainer {
+    top: 21%;
+    left: 20%;
+  }
 }
