--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -1,4 +1,8 @@
 @media screen and (max-width: 400px) {
+  .personal_info ul {
+    width: 96%;
+    margin-left: -1rem;
+  }
   .contact.info form .full {
     width: 85%;
   }
@@ -22,8 +26,11 @@
   }
   
   .card {
-    max-width: 24rem;
-    margin: 85px 42px;
+    max-width: 22rem;
+    margin: 85px 19px;
+  }
+  .card:hover .content {
+    margin-top: -6.5rem;
   }
   
 }
@@ -115,6 +122,12 @@
   .txtContainer {
     top: 18%;
     left: 17%;
+  }
+  .card {
+    max-width: 28rem;
+  }
+  .card .imgBx {
+    width: 22rem;
   }
 }
 
