--- a/styles/sass/partials/_portfolio.scss
+++ b/styles/sass/partials/_portfolio.scss
@@ -1,6 +1,7 @@
 #portfolio {
   background-image: url(../../../assets/portfolio/bg.jpg);
   margin-bottom: 50px;
+  width: 99%;
 }
 .port_title h3 {
   text-align: center;
@@ -16,140 +17,41 @@
   justify-items: center;
   align-items: center;
 }
-.project_item {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-}
-.project_item:hover,
-.project_item:focus {
-  transform: scale(1.1);
-  transition: all 0.5s ease-in-out;
-}
-.project_item img {
-  width: 23rem;
-  height: 20rem;
-  border: 5px solid white;
-  background-size: cover;
-  margin: 5px;
-}
+// .project_item {
+//   position: relative;
+//   display: flex;
+//   flex-direction: column;
+// }
+// .project_item:hover,
+// .project_item:focus {
+//   transform: scale(1.1);
+//   transition: all 0.5s ease-in-out;
+// }
+// .project_item img {
+//   width: 23rem;
+//   height: 20rem;
+//   border: 5px solid white;
+//   background-size: cover;
+//   margin: 5px;
+// }
 
-.project_item button {
-  background-color: black;
-  color: white;
-  border: 1px solid white;
-  border-radius: 20px;
-  display: inline-block;
-}
+// .project_item button {
+//   background-color: black;
+//   color: white;
+//   border: 1px solid white;
+//   border-radius: 20px;
+//   display: inline-block;
+// }
 .buttons {
   display: inline-block;
   text-align: center;
 }
-.project_item button:hover,
-.project_item button:focus {
-  background-color: $primary;
-  color: black;
-  transition: background-color 1.2s ease-out;
-}
-
-// Flip cards
-
-// :root {
-//   --level-one: translateZ(3rem);
-//   --level-two: translateZ(6rem);
-//   --level-three: translateZ(9rem);
-
-//   --fw-normal: 400;
-//   --fw-bold: 700;
-
-//   --clr: #b7c9e5;
+// .project_item button:hover,
+// .project_item button:focus {
+//   background-color: $primary;
+//   color: black;
+//   transition: background-color 1.2s ease-out;
 // }
-
-// .card {
-//   width: 400px;
-// }
-
-// .card__content {
-//   text-align: center;
-//   position: relative;
-//   padding: 9em 5em;
-//   transition: transform 3s;
-//   // background: pink;
-//   transform-style: preserve-3d;
-// }
-
-// .card:hover .card__content {
-//   transform: rotateY(.5turn);
-// }
-
-// .card__front,
-// .card__back {
-//   position: absolute;
-//   top: 0;
-//   bottom: 0;
-//   left: 0;
-//   right: 0;
-//   padding: 0 30px;
-//   backface-visibility: hidden;
-//   transform-style: preserve-3d;
-//   display: grid;
-//   align-content: center;
-// }
-
-// .card__front img {
-//   // background-color: var(--clr);
-//   // background-image: url(../../../assets/project_img/project3.png);
-//   // background-size:auto ;
-//   // background-blend-mode: overlay;
-//   // color: #333;
-//   width: 100%;
-//   object-fit: cover;
-// }
-
-// .card__front::before {
-//   content: '';
-//   position: absolute;
-//   --spacer: 1em;
-//   top: var(--spacer);
-//   bottom: var(--spacer);
-//   left: var(--spacer);
-//   right: var(--spacer);
-//   border: 3px solid currentColor;
-//   transform: var(--level-one);
-// }
-
-// .card__title {
-//   font-size: 3.5rem;
-//   transform: var(--level-three);
-//   order: 2;
-//   text-transform: uppercase;
-// }
-
-// .card__subtitle {
-//   transform: var(--level-two);
-//   text-transform: uppercase;
-//   letter-spacing: 4px;
-//   font-size: .75rem;
-//   font-weight: var(--fw-bold);
-//   opacity: .7;
-// }
-
-// .card__body {
-//   transform: var(--level-two);
-//   font-weight: var(fw-normal);
-//   font-size: 1.5rem;
-//   line-height: 1.6;
-// }
-
-
-
-// .card__back {
-//   transform: rotateY(.5turn);
-//   color: var(--clr);
-//   background: #333;
-// }
-
-// Slide cards
 
 .card {
   position: relative;
@@ -168,6 +70,10 @@
   height: 26rem;
 }
 
+.card:nth-child(3):hover {
+  height: 28rem;
+}
+
 .card .imgBx {
   position: relative;
   width: 24rem;
@@ -180,6 +86,7 @@
 
 .card .imgBx img {
   max-width: 100%;
+  height: 270px;
   border-radius: 4px;
 }
 
