--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -721,6 +721,7 @@ footer p {
 #portfolio {
   background-image: url(../../../assets/portfolio/bg.jpg);
   margin-bottom: 50px;
+  width: 99%;
 }
 
 .port_title h3 {
@@ -740,44 +741,9 @@ footer p {
   align-items: center;
 }
 
-.project_item {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-}
-
-.project_item:hover,
-.project_item:focus {
-  transform: scale(1.1);
-  transition: all 0.5s ease-in-out;
-}
-
-.project_item img {
-  width: 23rem;
-  height: 20rem;
-  border: 5px solid white;
-  background-size: cover;
-  margin: 5px;
-}
-
-.project_item button {
-  background-color: black;
-  color: white;
-  border: 1px solid white;
-  border-radius: 20px;
-  display: inline-block;
-}
-
 .buttons {
   display: inline-block;
   text-align: center;
-}
-
-.project_item button:hover,
-.project_item button:focus {
-  background-color: #dd1c63;
-  color: black;
-  transition: background-color 1.2s ease-out;
 }
 
 .card {
@@ -796,6 +762,10 @@ footer p {
   height: 26rem;
 }
 
+.card:nth-child(3):hover {
+  height: 28rem;
+}
+
 .card .imgBx {
   position: relative;
   width: 24rem;
@@ -807,6 +777,7 @@ footer p {
 
 .card .imgBx img {
   max-width: 100%;
+  height: 270px;
   border-radius: 4px;
 }
 
@@ -853,7 +824,7 @@ footer p {
 /*	23) Section Contact
 /*------------------------------------------------------------------*/
 .contact {
-  width: 100%;
+  width: 98%;
   padding: 1rem;
   box-shadow: 0 0 20px 0 rgba(221, 28, 99, 0.7);
   margin: 10px;
@@ -974,6 +945,11 @@ form .active .placeholder {
 }
 
 @media screen and (max-width: 400px) {
+  .personal_info ul {
+    width: 96%;
+    margin-left: -1rem;
+  }
+
   .contact.info form .full {
     width: 85%;
   }
@@ -1002,8 +978,12 @@ form .active .placeholder {
   }
 
   .card {
-    max-width: 24rem;
-    margin: 85px 42px;
+    max-width: 22rem;
+    margin: 85px 19px;
+  }
+
+  .card:hover .content {
+    margin-top: -6.5rem;
   }
 }
 @media screen and (max-width: 500px) {
@@ -1104,6 +1084,14 @@ form .active .placeholder {
   .txtContainer {
     top: 18%;
     left: 17%;
+  }
+
+  .card {
+    max-width: 28rem;
+  }
+
+  .card .imgBx {
+    width: 22rem;
   }
 }
 @media screen and (min-width: 769px) and (max-width: 1170px) {
