--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -6,7 +6,7 @@
   padding: 1rem;
   box-shadow: 0 0 20px 0 rgba($color: $primary, $alpha: 0.7);
   margin: 10px;
-  background-image: url(../../../assets/contact/bg.jpg);
+  background-image: url(../../../assets/contact/bg1.jpg);
 }
 .social {
   width: 100%;
