--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -832,7 +832,7 @@ footer p {
   padding: 1rem;
   box-shadow: 0 0 20px 0 rgba(221, 28, 99, 0.7);
   margin: 10px;
-  background-image: url(../../../assets/contact/bg.jpg);
+  background-image: url(../../../assets/contact/bg1.jpg);
 }
 
 .social {
