--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -198,6 +198,7 @@ header {
     font-family: $headingFont;
     font-size: 3.5rem;
     padding: 2rem 0;
+    text-decoration: none;
     // @include easeOut;
     &:hover {
       color: $primary;
