fixed grammar issues

--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -731,6 +731,10 @@ footer p {
   width: 99%;
 }
 
+.port_title {
+  padding-top: 20px;
+}
+
 .port_title h3 {
   margin-top: 50px;
   text-align: center;
