--- a/styles/sass/partials/_portfolio.scss
+++ b/styles/sass/partials/_portfolio.scss
@@ -3,6 +3,9 @@
   margin-bottom: 50px;
   width: 99%;
 }
+.port_title {
+  padding-top: 20px;
+}
 .port_title h3 {
   margin-top: 50px;
   text-align: center;
