--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -904,8 +904,16 @@ xrotate-2
   height: 26rem;
 }
 
+.card:nth-child(1):hover {
+  height: 31rem;
+}
+
 .card:nth-child(2):hover {
   height: 28rem;
+}
+
+.card:nth-child(3):hover {
+  height: 25rem;
 }
 
 .card .imgBx {
@@ -1093,47 +1101,37 @@ form .active .placeholder {
     width: 96%;
     margin-left: -1rem;
   }
-
   .contact.info form .full {
     width: 85%;
   }
-
   .full textarea {
     width: 95%;
   }
-
   input[type=text], input[type=email] {
     width: 95%;
   }
-
   main .txtContainer {
     top: 18%;
     left: 12%;
   }
-
   .txtContainer h1 {
     font-size: clamp(1rem, 2vw + 1rem, 4rem);
   }
-
   .card .imgBx {
     width: 19rem;
     top: -4rem;
     left: 0rem;
   }
-
   .card {
     max-width: 22rem;
     margin: 85px 19px;
   }
-
   .card:hover .content {
     margin-top: -4.5rem;
   }
-
   .card:hover {
     height: 30rem;
   }
-
   .card:nth-child(3):hover {
     height: 32rem;
   }
@@ -1143,39 +1141,31 @@ form .active .placeholder {
     display: flex;
     flex-direction: initial;
   }
-
   .txtContainer {
     top: 20%;
     left: 15%;
   }
-
   .menu .menu-branding h2 {
     margin: 5px;
     font-size: 2rem;
   }
-
   .menu .menu-nav {
     width: 100%;
     font-size: 1.5rem;
   }
-
   .menu .menu-branding {
     display: none;
   }
-
   .contact {
     width: 90%;
   }
-
   form .inputs p {
     width: 24rem;
   }
-
   .contact_info form {
     width: 100%;
     padding: 0.5rem;
   }
-
   .contact_info .inputs {
     display: grid;
     flex-direction: column;
@@ -1183,7 +1173,6 @@ form .active .placeholder {
     align-items: center;
     grid-column: 1/3;
   }
-
   .contact_info form .inputs p {
     width: 18rem;
   }
@@ -1194,12 +1183,10 @@ form .active .placeholder {
     flex-direction: initial;
     flex-wrap: nowrap;
   }
-
   .menu .menu-nav {
     width: 100%;
     font-size: 1.5rem;
   }
-
   .menu .menu-branding {
     display: none;
   }
@@ -1217,31 +1204,25 @@ form .active .placeholder {
     width: 100%;
     flex-direction: column;
   }
-
   .social ul {
     display: flex;
     flex-direction: initial;
   }
-
   .menu .menu-branding img {
     margin: 5px;
     width: 18rem;
     height: 18rem;
   }
-
   .menu .nav-item a {
     font-size: 2rem;
   }
-
   .txtContainer {
     top: 18%;
     left: 17%;
   }
-
   .card {
     max-width: 28rem;
   }
-
   .card .imgBx {
     width: 22rem;
   }
@@ -1250,7 +1231,6 @@ form .active .placeholder {
   .menu .menu-branding h2 {
     font-size: 3rem;
   }
-
   .projects {
     display: flex;
     width: 100%;
