changed about me text

--- a/styles/sass/partials/_main.scss
+++ b/styles/sass/partials/_main.scss
@@ -102,7 +102,7 @@ h1 span {
   margin-top: 50px;
 }
 .rightContainer p {
-  padding: 0 20px;
+  padding: 0 70px 20px 70px;
   font-family: $headingFont;
   font-size: 1.8rem;
   margin: 0;
